added jvm args to surefire argline