@@ -87,7 +87,7 @@
 			    <configuration>
 	    	        <forkCount>1</forkCount>
 	    	        <reuseForks>false</reuseForks>
-	    	        <argLine>${surefireArgLine}</argLine>
+	    	        <argLine>${surefireArgLine} -Xms32M -Xmx512M -XX:MaxPermSize=32M</argLine>
 			    </configuration>
 			</plugin>
 			<plugin>
